# GamesmanOne

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .zshrc：  CMakeLists.txt  Makefile.am  README  README.md  THIRD_PARTY_LICENSES  checks.md  config.h.in  configure.ac  gamesman_install.sh  server.py
src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  main.c
src/core/: CMakeLists.txt  analysis.c  analysis.h  concurrency.c  concurrency.h  constants.c  constants.h  db_manager.c  db_manager.h  game_manager.c  game_manager.h  gamesman.c  gamesman.h  gamesman_headless.c  gamesman_headless.h  gamesman_interactive.c  gamesman_interactive.h  gamesman_main.c  gamesman_math.c  gamesman_math.h  gamesman_memory.c  gamesman_memory.h  gamesman_types.c  gamesman_types.h  int64_array.c  int64_array.h  int64_hash_map.c  int64_hash_map.h  main.c  misc.c  misc.h  naivedb.c  naivedb.h  solver.c  solver.h  solver_manager.c  solver_manager.h  tier_hash_table.c  tier_hash_table.h  tier_solve.c  (+1 more)
src/core/analysis/: CMakeLists.txt  analysis.c  analysis.h  stat_manager.c  stat_manager.h
src/core/data_structures/: CMakeLists.txt  bitstream.c  bitstream.h  concurrent_bitset.c  concurrent_bitset.h  cstring.c  cstring.h  hash.h  int64_array.c  int64_array.h  int64_cache.c  int64_cache.h  int64_hash_map.c  int64_hash_map.h  int64_hash_map_ext.c  int64_hash_map_ext.h  int64_hash_map_sc.c  int64_hash_map_sc.h  int64_hash_set.c  int64_hash_set.h  int64_queue.c  int64_queue.h  int64_to_ptr_chained_hash_map.c  int64_to_ptr_chained_hash_map.h  x86_m128i_hash_set.h
src/core/db/: CMakeLists.txt  db_manager.c  db_manager.h
src/core/db/arraydb/: CMakeLists.txt  arraydb.c  arraydb.h  atomic_record.h  atomic_record_array.h  record.c  record.h  record_array.c  record_array.h
src/core/db/bpdb/: CMakeLists.txt  arraydb.c  arraydb.h  bparray.c  bparray.h  bparray_old.c  bparray_old.h  bpcompress.c  bpcompress.h  bpdb.c  bpdb.h  bpdb_file.c  bpdb_file.h  bpdb_lite.c  bpdb_lite.h  bpdb_probe.c  bpdb_probe.h  bpdict.c  bpdict.h  lookup_dict.c  lookup_dict.h  record.c  record.h  record_array.c  record_array.h
src/core/db/bpdb_old/: bpdb_file.c  bpdb_probe.c  bpdict.h
src/core/db/naivedb/: CMakeLists.txt  naivedb copy.c  naivedb.c  naivedb.h
src/core/generic_hash/: CMakeLists.txt  context.c  context.h  generic_hash.c  generic_hash.h  two_piece.c  two_piece.h
src/core/hash/: CMakeLists.txt  generic.c  generic.h  generic_context.c  generic_context.h  two_piece.c  two_piece.h  x86_simd_two_piece.c  x86_simd_two_piece.h
src/core/headless/: CMakeLists.txt  hanalyze.c  hanalyze.h  hjson.c  hjson.h  hparser.c  hparser.h  hquery.c  hquery.h  hsolve.c  hsolve.h  htest.c  htest.h  hutils.c  hutils.h  parser.c  parser.h
src/core/interactive/: CMakeLists.txt  automenu.c  automenu.h  main_menu.c  main_menu.h
src/core/interactive/credits/: CMakeLists.txt  credits.c  credits.h
src/core/interactive/games/: CMakeLists.txt  games.c  games.h
src/core/interactive/help/: CMakeLists.txt  help.c  help.h
src/core/savio/: CMakeLists.txt  savio.c  savio.h  scriptgen.c  scriptgen.h
src/core/solvers/: CMakeLists.txt  solver_manager.c  solver_manager.h
src/core/solvers/regular_solver/: CMakeLists.txt  (+2 more)
src/core/tier_solver/: frontier.c  frontier.h  reverse_graph.c  reverse_graph.h  tier_solver.c  tier_solver.h  tier_solver_old.c
src/core/types/: CMakeLists.txt  base.h  database.h  db_probe.h  game.h  game_variant.c  game_variant.h  gameplay_api.h  gamesman_error.h  gamesman_types.h  move_array.c  move_array.h  position_array.c  position_array.h  position_hash_set.c  position_hash_set.h  solver.h  solver_config.h  solver_option.h  tier_array.c  tier_array.h  tier_hash_map.c  tier_hash_map.h  tier_hash_map_ext.c  tier_hash_map_ext.h  tier_hash_map_sc.c  tier_hash_map_sc.h  tier_hash_set.c  tier_hash_set.h  tier_position_array.c  tier_position_array.h  tier_position_hash_set.c  tier_position_hash_set.h  tier_queue.c  tier_queue.h  tier_stack.c  tier_stack.h  tier_to_ptr_chained_hash_map.c  tier_to_ptr_chained_hash_map.h  universal_web_api.h
src/deprecated/: gamesman.c  main.c.old  naivedb copy.c  solver.c  solver.h  tier_solver_old.c
src/games/: CMakeLists.txt  game_list.c  game_list.h  game_manager.c  game_manager.h
src/games/dshogi/: CMakeLists.txt  dshogi.c  dshogi.h  dshogi_constants.c  dshogi_constants.h
src/games/fsvp/: CMakeLists.txt  fsvp.c  fsvp.h
src/games/gates/: CMakeLists.txt  gates.c  gates.h  gates_tier.c  gates_tier.h
src/games/gobblet/: CMakeLists.txt  gobblet_gobblers.c  gobblet_gobblers.h
src/games/kaooa/: CMakeLists.txt  kaooa.c  kaooa.h  kaooa2.c
src/games/kaooa_rs/: CMakeLists.txt  kaooa.c  kaooa.h
src/games/mallqueenschess/: CMakeLists.txt  mallqueenschess.c  mallqueenschess.h
src/games/mills/: CMakeLists.txt  board_formats.h  boards.h  constants_hardcode.cpp  convert.py  masks.h  mills.c  mills.h  mills_constants.h  variants.h
src/games/mninemensmorris/: mninemensmorris.c  mninemensmorris.h
src/games/mnktttier/: mnktttier.c  mnktttier.h
src/games/mttt/: CMakeLists.txt  mttt.c  mttt.h  mtttold.c
src/games/mttt demo/: ttz.c
src/games/mtttier/: CMakeLists.txt  mtttier.c  mtttier.h
src/games/neutron/: CMakeLists.txt  neutron.c  neutron.h
src/games/quixo/: CMakeLists.txt  convert.py  quixo.c  quixo.h  quixo_constants.c  quixo_constants.h  quixo_gameplay.h  quixo_solve.c  quixo_solve.h  quixo_two_piece.c  quixo_uwapi.h  quixo_variants.h
src/games/teeko/: CMakeLists.txt  teeko.c  teeko.h
src/games/templates/: template_regular.c  template_regular.h
src/games/winkers/: CMakeLists.txt  winkers.c  winkers.h
src/libs/: CMakeLists.txt
src/libs/lz4_utils/: CMakeLists.txt  lz4_utils.c  lz4_utils.h
src/libs/mgz/: CMakeLists.txt  gz64.c  gz64.h  mgz.c  mgz.h
src/libs/mt19937/: CMakeLists.txt  mt19937-64.c  mt19937-64.h
src/libs/xzra/: CMakeLists.txt  xzra.c  xzra.h
src/src/: Makefile  cmake_install.cmake
src/src/core/: Makefile  cmake_install.cmake
src/src/games/: Makefile  cmake_install.cmake
src/src/libs/: Makefile  cmake_install.cmake
(+287 files in other folders)
